refactor css on header, footer, main page and news page

--- a/src/app/components/buttons/nav/nav.component.css
+++ b/src/app/components/buttons/nav/nav.component.css
@@ -1,9 +1,8 @@
 a {
   display: block;
-  color: white;
+  color: var(--primary-color);
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
 }
 
 a:hover, .active {
