--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
 <footer class="site-footer">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col column">
         <h6>Categories</h6>
         <ul class="footer-links">
           <li><a routerLink="./c-language/">C</a></li>
@@ -14,7 +14,7 @@
         </ul>
       </div>
 
-      <div class="col">
+      <div class="col column">
         <h6>Quick Links</h6>
         <ul class="footer-links">
           <li><a routerLink="./about/">About Us</a></li>
@@ -25,7 +25,7 @@
         </ul>
       </div>
 
-      <div class="col c3">
+      <div class="col c12">
         <ul class="social-icons">
           <li><a class="facebook" routerLink="#"><i class="fa fa-facebook"></i></a></li>
           <li><a class="twitter" routerLink="#"><i class="fa fa-twitter"></i></a></li>
@@ -34,7 +34,7 @@
         </ul>
       </div>
     </div>
-      <div class="row">
+      <div class="row x-center">
         <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
           <a routerLink="#">RGT Solutions Ltd</a>.
         </p>
