--- a/src/app/components/buttons/cart/cart.component.css
+++ b/src/app/components/buttons/cart/cart.component.css
@@ -3,7 +3,7 @@ button {
   border: none;
   outline: 0;
   padding: 12px;
-  color: white;
+  color: var(--primary-color);
   background-color: #000;
   text-align: center;
   cursor: pointer;
