--- a/src/app/components/buttons/contact-btn/contact-btn.component.css
+++ b/src/app/components/buttons/contact-btn/contact-btn.component.css
@@ -4,7 +4,7 @@
   outline: 0;
   display: inline-block;
   padding: 8px;
-  color: white;
+  color: var(--primary-color);
   background-color: #000;
   text-align: center;
   cursor: pointer;
