--- a/src/app/components/buttons/submit/submit.component.css
+++ b/src/app/components/buttons/submit/submit.component.css
@@ -1,7 +1,7 @@
 
 input[type=submit] {
   background-color: #04AA6D;
-  color: white;
+  color: var(--primary-color);
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
