--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,21 +1,13 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
 
-li {
-  float: left;
+ul{
+  background-color: #333;
 }
 
 li a {
   display: block;
-  color: white;
+  color: var(--primary-color);
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
 }
 
 li a:hover, .active {
