--- a/src/app/components/products/products.component.css
+++ b/src/app/components/products/products.component.css
@@ -15,7 +15,7 @@
   border: none;
   outline: 0;
   padding: 12px;
-  color: white;
+  color: var(--primary-color);
   background-color: #000;
   text-align: center;
   cursor: pointer;
