--- a/src/app/views/about/about.component.css
+++ b/src/app/views/about/about.component.css
@@ -9,7 +9,7 @@
   padding: 50px;
   text-align: center;
   background-color: #474e5d;
-  color: white;
+  color: var(--primary-color);
 }
 
 .container {
