--- a/src/app/views/news/news.component.html
+++ b/src/app/views/news/news.component.html
@@ -1,7 +1,7 @@
 
 <div class="head">
-  <div class="headerobjectswrapper">
-    <div class="weatherforcastbox"><span style="font-style: italic;">Weatherforcast for the next 24 hours: Plenty of
+  <div class="header-objects-wrapper">
+    <div class="weather-forcast-box"><span>Weatherforcast for the next 24 hours: Plenty of
         Sunshine</span><br><span>Wind: 7km/h SSE; Ther: 21°C; Hum: 82%</span></div>
     <header>Newpost York</header>
   </div>
@@ -9,7 +9,7 @@
   <div class="subhead">York, MA - Thursday August 30, 1978 - Seven Pages</div>
 </div>
 <div class="content">
-  <div class="collumns">
+  <div class="collumns row">
     <div class="collumn">
       <div class="head"><span class="headline hl3">When darkness overspreads my eyes</span>
         <p><span class="headline hl4">by JOHANN WOLFGANG VON GOETHE</span></p>
