--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,11 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: white;
+  --border-color: #2f2f2f;
+}
+
 .b {
   border: 1px solid red;
 }
@@ -49,6 +54,11 @@ body {
 
 .col.auto {
   width: fit-content !important;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
 }
 
 .c1 {
@@ -147,6 +157,15 @@ h6 {
 
 p {
   margin: 0;
+}
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+a {
+  text-decoration: none;
 }
 
 .text-center{
