refactor css on shop, about and contact pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@
 
 :root {
   --primary-color: white;
+  --secondary-color: #000;
   --border-color: #2f2f2f;
 }
 
@@ -59,6 +60,16 @@ body {
 .column {
   display: flex;
   flex-direction: column;
+}
+
+.but{
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  border: none;
+  outline: 0;
 }
 
 .c1 {
