--- a/src/app/components/buttons/contact-btn/contact-btn.component.css
+++ b/src/app/components/buttons/contact-btn/contact-btn.component.css
@@ -1,16 +1,9 @@
 
-.button {
-  border: none;
-  outline: 0;
+button {
   display: inline-block;
   padding: 8px;
-  color: var(--primary-color);
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
 }
 
-.button:hover {
+button:hover {
   background-color: #555;
 }
