--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,5 +1,5 @@
 
-<div class="card">
+<div class="card full">
   <h1>{{product.title}}</h1>
   <img [src]="product.img" alt="Denim Jeans" style="width:100%">
   <p>{{product.desc}}</p>
