--- a/src/app/views/about/about.component.html
+++ b/src/app/views/about/about.component.html
@@ -4,7 +4,7 @@
   <p>Resize the browser window to see that this page is responsive by the way.</p>
 </div>
 
-<h2 style="text-align:center">Our Team</h2>
+<h2 class="text-center">Our Team</h2>
 <div class="row x-center">
   <div class="col c8">
     <div class="card" *ngFor="let companyMember of companyMembers">
