--- a/src/app/components/product-no-cart/product-no-cart.component.html
+++ b/src/app/components/product-no-cart/product-no-cart.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-  <h1>{{product.title}}</h1>
-  <img [src]="product.img" alt="Denim Jeans" style="width:100%">
-  <p>{{product.desc}}</p>
+  <h1>{{product?.title}}</h1>
+  <img [src]="product?.img" alt="Denim Jeans" class="full">
+  <p>{{product?.desc}}</p>
 </div>
