--- a/src/app/views/contact/contact.component.css
+++ b/src/app/views/contact/contact.component.css
@@ -14,3 +14,7 @@ input[type=text], select, textarea {
   background-color: #f2f2f2;
   padding: 20px;
 }
+
+.container textarea {
+  height:200px;
+}
