--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -3,6 +3,8 @@
   <h1>{{product?.title}}</h1>
   <img [src]="product?.img" alt="Denim Jeans" class="full">
   <p>{{product?.desc}}</p>
-  <p class="price">${{product?.price}}</p>
-  <app-cart></app-cart>
+  <ng-container *ngIf="product?.price">
+    <p class="price">${{product?.price}}</p>
+    <app-cart></app-cart>
+  </ng-container>
 </div>
